Fix icon issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2224,7 +2224,7 @@ input[type="radio"] + label:before {
 }
 
 .icon.major {
-  width: 2.5em;
+  width: 2.5em !important;
   height: 2.5em;
   display: block;
   background: #ffffff;
