--- a/assets/sass/components/_icon.scss
+++ b/assets/sass/components/_icon.scss
@@ -1,6 +1,7 @@
 
 /* Icon */
 
+
 	.icon {
 		@include icon;
 		border-bottom: none;
@@ -11,7 +12,7 @@
 		}
 
 		&.major {
-			width: 2.5em;
+			width: 2.5em!important;
 			height: 2.5em;
 			display: block;
 			background: _palette(fg-bold);
